harmbuger overlapping fixed

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -151,3 +151,12 @@
 
 
 }
+
+
+@media (min-width: 1025px) {
+
+.discover-grid {
+grid-template-columns: repeat(4, 1fr);
+}
+
+}
